# Lab_5

./: CMakeLists.txt  THIS IS LAB5  main.cpp  problem1.cpp  problem10.cpp  problem2.cpp  problem3.cpp  problem4.cpp  problem5.cpp  problem_5.cpp  problems.cpp
